Add simple tests for initial endpoints
